config/recipes/gclb/03-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hulk
  labels:
    app: hulk
  annotations:
    # Disable HTTP traffic
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
    - hosts: ["elasticsearch.hulk"]
      secretName: hulk-elasticsearch-cert
    - hosts: ["kibana.hulk"]
      secretName: hulk-kibana-cert
  rules:
    - host: "elasticsearch.hulk"
      http:
        paths:
          - path: "/*"
            backend:
              serviceName: hulk-es-http
              servicePort: 9200
    - host: "kibana.hulk"
      http:
        paths:
          - path: "/*"
            backend:
              serviceName: hulk-kb-http
              servicePort: 5601
